test_regress/t/t_covergroup_unsup.out
%Warning-COVERIGN: t/t_covergroup_unsup.v:65:25: Ignoring unsupported: coverage '@@' events
   65 |    covergroup cg_atat() @@ (begin funca or end funcb);
      |                         ^~
                   ... For warning description see https://verilator.org/warn/COVERIGN?v=latest
                   ... Use "/* verilator lint_off COVERIGN */" and lint_on around source to disable this message.
%Warning-COVERIGN: t/t_covergroup_unsup.v:110:24: Ignoring unsupported: coverage cross 'function' declaration
  110 |          function void crossfunc; endfunction
      |                        ^~~~~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:111:21: Ignoring unsupported: coverage select function call
  111 |          bins one = crossfunc();
      |                     ^~~~~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:139:33: Ignoring unsupported: covergroup value range
  139 |       { bins bts2 = ( 2, 3 ), ( [5:6] ), ( [5 +/- 2] ), ( [ 5 +%- 20.0] ) ; }
      |                                 ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:139:44: Ignoring unsupported: covergroup value range
  139 |       { bins bts2 = ( 2, 3 ), ( [5:6] ), ( [5 +/- 2] ), ( [ 5 +%- 20.0] ) ; }
      |                                            ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:139:59: Ignoring unsupported: covergroup value range
  139 |       { bins bts2 = ( 2, 3 ), ( [5:6] ), ( [5 +/- 2] ), ( [ 5 +%- 20.0] ) ; }
      |                                                           ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:162:23: Ignoring unsupported: coverage select expression with (standalone)
  162 |          bins bin_e = with (a);
      |                       ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:163:27: Ignoring unsupported: coverage select expression with (negated standalone)
  163 |          bins bin_not_e = ! with (a);
      |                           ^
%Warning-WIDTHTRUNC: t/t_covergroup_unsup.v:77:7: Logical operator COVERPOINT expects 1 bit on the iff condition, but iff condition's VARREF 'b' generates 32 bits.
                                                : ... note: In instance 't'
   77 |       coverpoint a iff (b);
      |       ^~~~~~~~~~
                     ... For warning description see https://verilator.org/warn/WIDTHTRUNC?v=latest
                     ... Use "/* verilator lint_off WIDTHTRUNC */" and lint_on around source to disable this message.
%Warning-WIDTHTRUNC: t/t_covergroup_unsup.v:80:11: Logical operator COVERPOINT 'id' expects 1 bit on the iff condition, but iff condition's VARREF 'b' generates 32 bits.
                                                 : ... note: In instance 't'
   80 |       id: coverpoint a iff (b);
      |           ^~~~~~~~~~
%Warning-WIDTHTRUNC: t/t_covergroup_unsup.v:83:15: Logical operator COVERPOINT 'id' expects 1 bit on the iff condition, but iff condition's VARREF 'b' generates 32 bits.
                                                 : ... note: In instance 't'
   83 |       int id: coverpoint a iff (b);
      |               ^~~~~~~~~~
%Warning-WIDTHTRUNC: t/t_covergroup_unsup.v:86:19: Logical operator COVERPOINT 'id' expects 1 bit on the iff condition, but iff condition's VARREF 'b' generates 32 bits.
                                                 : ... note: In instance 't'
   86 |       var int id: coverpoint a iff (b);
      |                   ^~~~~~~~~~
%Warning-WIDTHTRUNC: t/t_covergroup_unsup.v:89:21: Logical operator COVERPOINT 'id' expects 1 bit on the iff condition, but iff condition's VARREF 'b' generates 32 bits.
                                                 : ... note: In instance 't'
   89 |       var [3:0] id: coverpoint a iff (b);
      |                     ^~~~~~~~~~
%Warning-WIDTHTRUNC: t/t_covergroup_unsup.v:92:17: Logical operator COVERPOINT 'id' expects 1 bit on the iff condition, but iff condition's VARREF 'b' generates 32 bits.
                                                 : ... note: In instance 't'
   92 |       [3:0] id: coverpoint a iff (b);
      |                 ^~~~~~~~~~
%Warning-WIDTHTRUNC: t/t_covergroup_unsup.v:95:18: Logical operator COVERPOINT 'id' expects 1 bit on the iff condition, but iff condition's VARREF 'b' generates 32 bits.
                                                 : ... note: In instance 't'
   95 |       signed id: coverpoint a iff (b);
      |                  ^~~~~~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:142:25: Ignoring unsupported: cover '[*'
                                                : ... note: In instance 't'
  142 |       { bins bts2 = ( 3 [*5] ) ; }
      |                         ^~
%Warning-COVERIGN: t/t_covergroup_unsup.v:143:25: Ignoring unsupported: cover '[*'
                                                : ... note: In instance 't'
  143 |       { bins bts2 = ( 3 [*5:6] ) ; }
      |                         ^~
%Warning-COVERIGN: t/t_covergroup_unsup.v:144:25: Ignoring unsupported: cover '[->'
                                                : ... note: In instance 't'
  144 |       { bins bts2 = ( 3 [->5] ) ; }
      |                         ^~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:145:25: Ignoring unsupported: cover '[->'
                                                : ... note: In instance 't'
  145 |       { bins bts2 = ( 3 [->5:6] ) ; }
      |                         ^~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:146:25: Ignoring unsupported: cover '[='
                                                : ... note: In instance 't'
  146 |       { bins bts2 = ( 3 [=5] ) ; }
      |                         ^~
%Warning-COVERIGN: t/t_covergroup_unsup.v:147:25: Ignoring unsupported: cover '[='
                                                : ... note: In instance 't'
  147 |       { bins bts2 = ( 3 [=5:6] ) ; }
      |                         ^~
%Warning-COVERIGN: t/t_covergroup_unsup.v:61:36: Covergroup clocking event parsed but automatic sampling not yet implemented; call sample() manually
                                               : ... note: In instance 't'
   61 |    covergroup cg_clockingevent() @(posedge clk);
      |                                    ^~~~~~~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:100:7: Cross coverage references unknown coverpoint 'a'
                                                : ... note: In instance 't'
  100 |       cross a, b iff (!rst);
      |       ^~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:103:7: Cross coverage references unknown coverpoint 'a'
                                                : ... note: In instance 't'
  103 |       cross a, b iff (!rst) {}
      |       ^~~~~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:106:7: Cross coverage references unknown coverpoint 'a'
                                                : ... note: In instance 't'
  106 |       cross a, b { option.comment = "cross"; option.weight = 12; }
      |       ^~~~~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:109:7: Cross coverage references unknown coverpoint 'a'
                                                : ... note: In instance 't'
  109 |       cross a, b {
      |       ^~~~~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:115:17: Cross coverage references unknown coverpoint 'a'
                                                 : ... note: In instance 't'
  115 |       my_cg_id: cross a, b iff (!rst);
      |                 ^~~~~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:153:7: Cross coverage references unknown coverpoint 'a'
                                                : ... note: In instance 't'
  153 |       cross a, b {
      |       ^~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:183:24: Covergroup clocking event parsed but automatic sampling not yet implemented; call sample() manually
                                                : ... note: In instance 't'
  183 |       covergroup cov1 @m_z;
      |                        ^~~
%Warning-UNSIGNED: t/t_covergroup_unsup.v:74:7: Comparison is constant due to unsigned arithmetic
                                              : ... note: In instance 't'
   74 |       coverpoint a;
      |       ^~~~~~~~~~
                   ... For warning description see https://verilator.org/warn/UNSIGNED?v=latest
                   ... Use "/* verilator lint_off UNSIGNED */" and lint_on around source to disable this message.
%Warning-CMPCONST: t/t_covergroup_unsup.v:74:7: Comparison is constant due to limited range
                                              : ... note: In instance 't'
   74 |       coverpoint a;
      |       ^~~~~~~~~~
                   ... For warning description see https://verilator.org/warn/CMPCONST?v=latest
                   ... Use "/* verilator lint_off CMPCONST */" and lint_on around source to disable this message.
%Warning-UNSIGNED: t/t_covergroup_unsup.v:77:7: Comparison is constant due to unsigned arithmetic
                                              : ... note: In instance 't'
   77 |       coverpoint a iff (b);
      |       ^~~~~~~~~~
%Warning-CMPCONST: t/t_covergroup_unsup.v:77:7: Comparison is constant due to limited range
                                              : ... note: In instance 't'
   77 |       coverpoint a iff (b);
      |       ^~~~~~~~~~
%Warning-UNSIGNED: t/t_covergroup_unsup.v:80:11: Comparison is constant due to unsigned arithmetic
                                               : ... note: In instance 't'
   80 |       id: coverpoint a iff (b);
      |           ^~~~~~~~~~
%Warning-CMPCONST: t/t_covergroup_unsup.v:80:11: Comparison is constant due to limited range
                                               : ... note: In instance 't'
   80 |       id: coverpoint a iff (b);
      |           ^~~~~~~~~~
%Warning-UNSIGNED: t/t_covergroup_unsup.v:83:15: Comparison is constant due to unsigned arithmetic
                                               : ... note: In instance 't'
   83 |       int id: coverpoint a iff (b);
      |               ^~~~~~~~~~
%Warning-CMPCONST: t/t_covergroup_unsup.v:83:15: Comparison is constant due to limited range
                                               : ... note: In instance 't'
   83 |       int id: coverpoint a iff (b);
      |               ^~~~~~~~~~
%Warning-UNSIGNED: t/t_covergroup_unsup.v:86:19: Comparison is constant due to unsigned arithmetic
                                               : ... note: In instance 't'
   86 |       var int id: coverpoint a iff (b);
      |                   ^~~~~~~~~~
%Warning-CMPCONST: t/t_covergroup_unsup.v:86:19: Comparison is constant due to limited range
                                               : ... note: In instance 't'
   86 |       var int id: coverpoint a iff (b);
      |                   ^~~~~~~~~~
%Warning-UNSIGNED: t/t_covergroup_unsup.v:89:21: Comparison is constant due to unsigned arithmetic
                                               : ... note: In instance 't'
   89 |       var [3:0] id: coverpoint a iff (b);
      |                     ^~~~~~~~~~
%Warning-CMPCONST: t/t_covergroup_unsup.v:89:21: Comparison is constant due to limited range
                                               : ... note: In instance 't'
   89 |       var [3:0] id: coverpoint a iff (b);
      |                     ^~~~~~~~~~
%Warning-UNSIGNED: t/t_covergroup_unsup.v:92:17: Comparison is constant due to unsigned arithmetic
                                               : ... note: In instance 't'
   92 |       [3:0] id: coverpoint a iff (b);
      |                 ^~~~~~~~~~
%Warning-CMPCONST: t/t_covergroup_unsup.v:92:17: Comparison is constant due to limited range
                                               : ... note: In instance 't'
   92 |       [3:0] id: coverpoint a iff (b);
      |                 ^~~~~~~~~~
%Warning-UNSIGNED: t/t_covergroup_unsup.v:95:18: Comparison is constant due to unsigned arithmetic
                                               : ... note: In instance 't'
   95 |       signed id: coverpoint a iff (b);
      |                  ^~~~~~~~~~
%Warning-CMPCONST: t/t_covergroup_unsup.v:95:18: Comparison is constant due to limited range
                                               : ... note: In instance 't'
   95 |       signed id: coverpoint a iff (b);
      |                  ^~~~~~~~~~
%Warning-UNSIGNED: t/t_covergroup_unsup.v:184:10: Comparison is constant due to unsigned arithmetic
                                                : ... note: In instance 't'
  184 |          coverpoint m_x;
      |          ^~~~~~~~~~
%Warning-CMPCONST: t/t_covergroup_unsup.v:184:10: Comparison is constant due to limited range
                                                : ... note: In instance 't'
  184 |          coverpoint m_x;
      |          ^~~~~~~~~~
%Warning-UNSIGNED: t/t_covergroup_unsup.v:185:10: Comparison is constant due to unsigned arithmetic
                                                : ... note: In instance 't'
  185 |          coverpoint m_y;
      |          ^~~~~~~~~~
%Warning-CMPCONST: t/t_covergroup_unsup.v:185:10: Comparison is constant due to limited range
                                                : ... note: In instance 't'
  185 |          coverpoint m_y;
      |          ^~~~~~~~~~
%Error: Exiting due to
